--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBlue">#1355F8</color>
+    <color name="colorGray">#F5F5F5</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGreen">#1F5800</color>
+    <color name="colorRed">#EA0000</color>
 </resources>
+
