--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="4"
+    android:weightSum="10"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.8"
+        android:layout_weight="4.3"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:background="@color/colorBlue"
@@ -47,7 +47,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:text="서울특별시 강서구 마곡중앙10로 30"
-
             android:layout_marginLeft="10dp"
             android:textStyle="bold"
             android:textColor="@color/colorWhite"
@@ -63,8 +62,7 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/border_radius"
             android:paddingTop="15dp"
-            android:paddingLeft="30dp"
-            >
+            android:paddingLeft="30dp">
 
             <TextView
                 android:id="@+id/TempText"
@@ -78,9 +76,10 @@
                 android:id="@+id/HumidText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="36dp"
+                android:layout_marginStart="40dp"
                 android:text="습도"
                 app:layout_constraintLeft_toRightOf="@+id/TempText"
+                app:layout_constraintStart_toEndOf="@+id/TempText"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -126,13 +125,12 @@
                 app:layout_constraintStart_toEndOf="@+id/UserHomeHumState"
                 app:layout_constraintTop_toBottomOf="@+id/HumidText" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.2"
+        android:layout_weight="2.7"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
         android:paddingTop="20dp"
@@ -142,7 +140,7 @@
             android:id="@+id/text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="회원님은 현재,"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
@@ -194,7 +192,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2.2"
         android:paddingLeft="40dp"
         android:paddingRight="40dp"
         android:paddingTop="20dp"
@@ -204,7 +202,7 @@
             android:id="@+id/text6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="회원님은 현재,"
             android:textColor="#000000"
             app:layout_constraintStart_toStartOf="parent"
@@ -231,6 +229,22 @@
             android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="@+id/UserLocationState"
             app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.8"
+        >
+
+        <Button
+            android:id="@+id/buttonCalling"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="전화걸기"
+            android:background="@color/colorDarkGray"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="0dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
 
